# autism-pathway-framework

./: .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  DISCLAIMER.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  analyze_pptx.py  apply_theme.py  conftest.py  create_merged_presentation.py  create_presentation.py  pyproject.toml  requirements.txt  run_demo.sh
.github/: PROJECT_BOARD.md  create_issues.sh
.github/ISSUE_TEMPLATE/: config.yml  task.yml  weekly_milestone.yml
.github/workflows/: ci.yml
autism_pathway_framework/: __init__.py  __main__.py  cli.py  pipeline.py  validation.py
autism_pathway_framework/utils/: __init__.py  verify_reproducibility.py
configs/: default.yaml  demo.yaml  gcp_config.yaml
deploy/: gcp_setup.sh
docs/: api_reference.md  architecture-diagram.md  configuration.md  data_formats.md  data_schema.md  data_versions.md  domain_knowledge_integration_analysis.md  external_data_sources.md  framework_overview.md  implementation_plan.md  knowledge_graph_developer_guide.md  limitations.md  outputs_dictionary.md  pathway_scoring_concept.md  quickstart.md  reproducibility.md  stability_replication.md  start-here-researchers.md  terminology.md  testing.md  troubleshooting.md  v0.1_scope.md  zenodo_setup.md
docs/outreach/: email-template.md  one-pager.md  run-on-your-cohort.md  sfari-data-access-application.md  sfari-pilot-grant-outline.md  target-labs.md
examples/: synthetic_example.md
examples/demo_data/: README.md  demo_pathways.gmt  demo_phenotypes.csv  demo_variants.vcf
examples/notebooks/: 01_demo_end_to_end.ipynb
modules/: __init__.py
modules/01_data_loaders/: README.md  __init__.py  annotation_loader.py  constraint_loader.py  expression_loader.py  pathway_loader.py  single_cell_loader.py  vcf_loader.py
modules/01_data_loaders/tests/: __init__.py  test_constraint_loader.py  test_pathway_loader.py  (+1 more)
modules/02_variant_processing/: README.md  __init__.py  annotation.py  gene_burden.py  qc_filters.py
modules/03_knowledge_graph/: README.md  __init__.py  builder.py  exporters.py  schema.py
modules/04_graph_embeddings/: README.md  __init__.py  base.py  rotate.py  trainer.py  transe.py
modules/05_pretrained_embeddings/: README.md  __init__.py  base.py  esm2.py  fusion.py  geneformer.py  literature.py
modules/06_ontology_gnn/: README.md  __init__.py  attention.py  config.py  layers.py  model.py  utils.py
modules/07_pathway_scoring/: README.md  __init__.py  aggregation.py  network_propagation.py  normalization.py
modules/08_subtype_clustering/: README.md  __init__.py  characterization.py  clustering.py  stability.py  validation.py
modules/09_symbolic_rules/: README.md  __init__.py  biological_rules.py  conditions.py  explanation.py  rule_engine.py
modules/10_neurosymbolic/: README.md  __init__.py  combiner.py  integration.py
modules/11_therapeutic_hypotheses/: README.md  __init__.py  evidence.py  pathway_drug_mapping.py  ranking.py
modules/12_causal_inference/: README.md  __init__.py  causal_graph.py  counterfactuals.py  do_calculus.py  effect_estimation.py
pipelines/: README.md  __init__.py  causal_analysis.py  subtype_discovery.py  therapeutic_hypothesis.py
pipelines/tests/: __init__.py  test_session18_pipelines.py  test_subtype_discovery.py
pseudocode/: gene_to_pathway.md  network_refinement.md  subtype_clustering.md  variant_to_gene.md
scripts/: download_databases.sh  setup_local.sh  update_golden_outputs.py
tests/fixtures/: README.md  sample_cluster_assignments.json  sample_constraints.tsv  sample_gene_burdens.json  sample_pathway_scores.json  sample_pathways.gmt  sample_sfari_genes.csv  sample_variants.vcf
tests/golden/: README.md  expected_outputs.yaml
(+34 files in other folders)
